tests/Casm/negative/test002.casm
-- Invalid memory access

start:
  [ap] = [ap] + 1; ap++
